<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="info.julionava.testocr.activities.MenuActivity">

    <Button
        android:onClick="btnIfeB"
        android:text="@string/test_ife_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="btnIfeC"
        android:text="@string/test_ife_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="btnIneD"
        android:text="@string/test_ine_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="btnIfeE"
        android:text="@string/test_ine_e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="btnTestPhoto"
        android:text="@string/test_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>